--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,8 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    min-height: 100dvh;
+    background-color: aliceblue;
 }
 
 .calculator {
