--- a/styles.css
+++ b/styles.css
@@ -41,7 +41,7 @@ button {
     font-size: 2rem;
     padding: 5px;
     aspect-ratio: 1/1;
-    border-radius: 1rem;
+    border-radius: 100%;
 }
 button:active {
     filter: brightness(0.8);
